--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 /* header */
 
 header {
-  width: 95%;
+  width: 97%;
   border: 5px solid yellow;
   padding: 24px 0;
   margin-inline: auto;
@@ -57,7 +57,7 @@ header div p {
 }
 
 .section_div_1 {
-  width: 80%;
+  width: 85%;
   font-family: "Inter", sans-serif;
   margin-inline: auto;
   border: 5px solid green;
@@ -170,4 +170,72 @@ header div p {
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
+}
+
+/* section3 */
+
+.section_3 {
+  width: 100%;
+  padding: 96px 0;
+  background: #000000;
+  font-family: "Inter", sans-serif;
+}
+
+.section_3_box {
+  width: 85%;
+  border: 5px solid yellow;
+  margin-inline: auto;
+  display: flex;
+  justify-content: space-between;
+}
+.section_3_div {
+  width: 44%;
+  border: 3px solid green;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /* align-items: center; */
+}
+
+.section_3_div h2 {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 24px;
+  line-height: 32px;
+
+  color: #ffffff;
+}
+.section_3_p_1 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin: 16px 0;
+
+  color: #ffffff;
+}
+
+.section_3_p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin-bottom: 8px;
+
+  color: #ffffff;
+}
+
+.section_3_box_2 {
+  display: flex;
+  flex-direction: column;
+  row-gap: 8px;
+}
+
+.section_3_box_2 p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+
+  color: #ffffff;
 }
