--- a/css/mobile.css
+++ b/css/mobile.css
@@ -235,3 +235,76 @@
     width: 13%;
   }
 }
+
+@media (max-width: 580px) {
+  nav {
+    display: none;
+  }
+  .header_div {
+    display: none;
+  }
+  .burger_icon {
+    display: block;
+    width: 25px;
+    height: 25px;
+  }
+  .section_div_action_2 {
+    width: 20%;
+  }
+}
+
+@media (max-width: 500px) {
+  .footer_div {
+    display: flex;
+    row-gap: 25px;
+    justify-content: center;
+    align-items: center;
+  }
+  .footer_div_logo {
+    width: 25%;
+  }
+  .footer_box_1_div {
+    width: 100%;
+    /* border: 3px solid red; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+  }
+}
+
+@media (max-width: 375px) {
+  /* section 1 */
+  .section_div_2 h1 {
+    width: 100%;
+    font-size: 39.5px;
+  }
+  .section_div_action_2 {
+    width: 30%;
+  }
+  .section_div_action_2_p {
+    width: 95%;
+  }
+  .section_div_img img {
+    height: 309px;
+  }
+
+  /* section 3 */
+  .section_3_div_img img {
+    height: 195px;
+  }
+  .section_3_div h2 {
+    font-size: 16px;
+  }
+  .section_3_div p {
+    font-size: 14px;
+  }
+  /* sectioin 4 */
+  .div_box_4 h1 {
+    width: 70%;
+    font-size: 28px;
+  }
+  .action_div_4 {
+    width: 25%;
+  }
+}
